feat(issue53): 新增該用戶目前的未讀訊息數量
