# src/routes/api/v1/adminRouter.ts
@@ -20,7 +20,7 @@ router.get('/notice-list',
     },
     #swagger.responses[200] = {
       description: '通知訊息列表資訊',
-      schema: { $ref: '#/definitions/noticeList' }
+      schema: { $ref: '#/definitions/allNoticeList' }
     }
   */
   getNoticeList)
